# Q3_Assignments

./: README.md
Growth_mindeset_FIle converter/data-cleaner/: main.py
Password_strength_meter/: pass.py
Personal_Library-Manager/: library.txt
Secure Data Encryption/secure-data/: pyproject.toml  secure-data.py  secure_data.json
