[tool.poetry]
name = "secure-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
cryptography = "^41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
